--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -1,5 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
+@using Models;
+@using Services;
+
+@inject ITaskService _taskService
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
