--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -32,7 +32,7 @@
                     <div class="card" style="margin-top:8px">
                         <div class="card-body">
                             <div class="row">
-                                <div class="col" @onclick="() => SelectTask(userTask.TaskGUID)">
+                                <div class="col" @onclick="() => SelectTaskItem(userTask.TaskGUID)">
                                     <h6 class="card-title"><b>@userTask.Title</b></h6>
                                 </div>
                                 <div class="col" >
@@ -92,7 +92,7 @@
             <h6><b>Current Task</b></h6>
             <div class="border border-primary p-3 rounded-3" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Title..." @bind="@selectedTask.UserTaskData.Title" disabled>
+                    <input type="text" class="form-control" placeholder="Title..." @bind="@selectedTaskItem.Title" disabled>
                     <div class="dropdown">
                         <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button" disabled>
                             @selectedPriority
@@ -107,9 +107,9 @@
             <div class="row">
                 <div class="input-group mb-3 text-center col">
                     <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
-                        @if (selectedTask.TaskGUID != "")
+                        @if (selectedTaskItem.TaskGUID != "")
                         {
-                            <input type="date" class="form-control" aria-label="Sizing example input" @bind="@selectedTask.AssignedDate" aria-describedby="inputGroup-sizing-default" disabled>
+                            <input type="date" class="form-control" aria-label="Sizing example input" @bind="@selectedTaskItem.AssignedDate" aria-describedby="inputGroup-sizing-default" disabled>
                         } else
                         {
                             <input type="date" class="form-control" aria-label="Sizing example input" value="@todayDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default" disabled>
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="input-group" style="height:60vh">
-                    <textarea class="form-control" aria-label="With textarea" @bind="@selectedTask.UserTaskData.Notes" placeholder="Notes" disabled></textarea>
+                    <textarea class="form-control" aria-label="With textarea" @bind="@selectedTaskItem.Notes" placeholder="Notes" disabled></textarea>
                 </div>
             </div>
         </div>
@@ -139,9 +139,9 @@
 
 @code {
 
-    AuxDeskServices _auxDeskServices = new AuxDeskServices();
-    private List<UserTask> listDaysUserTasks = new List<UserTask>();
-    private UserTask selectedTask = new UserTask();
+    //AuxDeskServices _auxDeskServices = new AuxDeskServices();
+    //private List<UserTask> listDaysUserTasks = new List<UserTask>();
+    //private UserTask selectedTask = new UserTask();
     DateOnly todayDate = DateOnly.FromDateTime(DateTime.UtcNow);
     DateOnly taskDate;
     public string ProgressDisplay = "none";
@@ -159,15 +159,16 @@
     private string selectedStatus = "Not started";
 
     //
-    List<TaskItem> listTaskItems = new ();
+    private List<TaskItem> listTaskItems = new ();
+    private TaskItem selectedTaskItem = new ();
     //
 
 
     protected override void OnInitialized()
     {
         taskDate = DateOnly.FromDateTime(DateTime.UtcNow);
-        Load();
-        _auxDeskServices.CRUDPermenentDelete();
+        LoadTaskItems();
+        //_auxDeskServices.CRUDPermenentDelete();
     }
 
     private void DirectToNewTask()
@@ -181,7 +182,7 @@
 
         DateOnly.TryParse(e.Value.ToString(), out newDate);
         taskDate = newDate;
-        Load();
+        LoadTaskItems();
     }
 
     private List<UserTask> FilterTasks(List<UserTask> listUserTasks)
@@ -215,125 +216,100 @@
 
     private void SelectStatus(int status)
     {
-        if (selectedTask.TaskGUID == "")
-        {
-            return;
-        }
+        // if (selectedTask.TaskGUID == "")
+        // {
+        //     return;
+        // }
 
-        DateTime time = DateTime.UtcNow;
-        List<UserTask> listUserTasks = _auxDeskServices.GetUserTasks();
+        // DateTime time = DateTime.UtcNow;
+        // List<UserTask> listUserTasks = _auxDeskServices.GetUserTasks();
 
-        UserTask editTask = listUserTasks.FirstOrDefault(userTask => userTask.TaskGUID == selectedTask.TaskGUID);
+        // UserTask editTask = listUserTasks.FirstOrDefault(userTask => userTask.TaskGUID == selectedTask.TaskGUID);
 
-        if (status == 1)
-        {
-            editTask.StartDateTime = null;
-            editTask.EndDateTime = null;
-            editTask.IsDone = false;
-        }
-        else if (status == 2)
-        {
-            if (selectedTask.StartDateTime == null)
-            {
-                editTask.StartDateTime = time;
-            }
+        // if (status == 1)
+        // {
+        //     editTask.StartDateTime = null;
+        //     editTask.EndDateTime = null;
+        //     editTask.IsDone = false;
+        // }
+        // else if (status == 2)
+        // {
+        //     if (selectedTask.StartDateTime == null)
+        //     {
+        //         editTask.StartDateTime = time;
+        //     }
 
-            editTask.EndDateTime = null;
-            editTask.IsDone = false;
-        }
-        else
-        {
-            if (selectedTask.StartDateTime == null)
-            {
-                editTask.StartDateTime = time;
-            }
-            editTask.EndDateTime = time;
-            editTask.IsDone = true;
-        }
+        //     editTask.EndDateTime = null;
+        //     editTask.IsDone = false;
+        // }
+        // else
+        // {
+        //     if (selectedTask.StartDateTime == null)
+        //     {
+        //         editTask.StartDateTime = time;
+        //     }
+        //     editTask.EndDateTime = time;
+        //     editTask.IsDone = true;
+        // }
 
-        _auxDeskServices.Save(listUserTasks, null, false);
-        Load();
+        // _auxDeskServices.Save(listUserTasks, null, false);
+        // LoadTaskItems();
 
-        isDropdownOpenStatus = false;
-        selectedStatus = "Done";
+        // isDropdownOpenStatus = false;
+        // selectedStatus = "Done";
 
-        if (status == 1) { selectedStatus = "Not started"; }
-        else if (status == 2) { selectedStatus = "In progress"; }
+        // if (status == 1) { selectedStatus = "Not started"; }
+        // else if (status == 2) { selectedStatus = "In progress"; }
 
     }
 
-    // private void Load()
-    // {
-
-    //     List<UserTask> listUserTasks = _auxDeskServices.GetUserTasks();
-
-    //     if (listUserTasks == null || listUserTasks.Count == 0)
-    //     {
-    //         return;
-    //     }
-    //     listDaysUserTasks = FilterTasks(listUserTasks);
-
-    //     TotalTasks = listDaysUserTasks.Count;
-    //     CompletedTasks = listDaysUserTasks.Count(task => task.EndDateTime != null && task.IsDone);
-    //     NotStartedTasks = listDaysUserTasks.Count(task => task.StartDateTime == null);
-    //     InProgressTasks = listDaysUserTasks.Count(task => task.StartDateTime != null && !task.IsDone);
-    // }
-
-    private async void Load()
+    private async void LoadTaskItems()
     {
         listTaskItems = await _taskService.GetTaskItemsAsync(taskDate);
-
-        //List<UserTask> listUserTasks = _auxDeskServices.GetUserTasks();
 
         if (listTaskItems == null || listTaskItems.Count == 0)
         {
             return;
         }
-        // listDaysUserTasks = FilterTasks(listUserTasks);
-
-        // TotalTasks = listDaysUserTasks.Count;
-        // CompletedTasks = listDaysUserTasks.Count(task => task.EndDateTime != null && task.IsDone);
-        // NotStartedTasks = listDaysUserTasks.Count(task => task.StartDateTime == null);
-        // InProgressTasks = listDaysUserTasks.Count(task => task.StartDateTime != null && !task.IsDone);
     }
 
     private void DeleteTask(string taskGUID)
     {
 
-        List<UserTask> listUserTasks = _auxDeskServices.GetUserTasks();
+        // List<UserTask> listUserTasks = _auxDeskServices.GetUserTasks();
 
-        UserTask taskToDelete = listUserTasks.FirstOrDefault(task => task.TaskGUID == taskGUID);
-        taskToDelete.IsDeleted = true;
+        // UserTask taskToDelete = listUserTasks.FirstOrDefault(task => task.TaskGUID == taskGUID);
+        // taskToDelete.IsDeleted = true;
 
-        if (taskToDelete.IsDone)
-        {
-            CompletedTasks--;
-        }
-        if (taskToDelete.StartDateTime == null)
-        {
-            NotStartedTasks--;
-        } 
-        else
-        {
-            InProgressTasks--;
-        }
-        TotalTasks--;
+        // if (taskToDelete.IsDone)
+        // {
+        //     CompletedTasks--;
+        // }
+        // if (taskToDelete.StartDateTime == null)
+        // {
+        //     NotStartedTasks--;
+        // } 
+        // else
+        // {
+        //     InProgressTasks--;
+        // }
+        // TotalTasks--;
 
-        if (selectedTask.TaskGUID == taskToDelete.TaskGUID)
-        {
-            selectedTask = new UserTask();
-        }
+        // if (selectedTask.TaskGUID == taskToDelete.TaskGUID)
+        // {
+        //     selectedTask = new UserTask();
+        // }
 
-        DeletedTask deletedTask = new DeletedTask {
-            TaskGUID = taskToDelete.TaskGUID,
-            TaskDeletedDate = DateOnly.FromDateTime(DateTime.UtcNow),
-        };
+        // DeletedTask deletedTask = new DeletedTask {
+        //     TaskGUID = taskToDelete.TaskGUID,
+        //     TaskDeletedDate = DateOnly.FromDateTime(DateTime.UtcNow),
+        // };
 
-        _auxDeskServices.DeleteTask(deletedTask);
+        // _auxDeskServices.DeleteTask(deletedTask);
 
-        _auxDeskServices.Save(listUserTasks, null, false);
+        // _auxDeskServices.Save(listUserTasks, null, false);
 
-        listDaysUserTasks = FilterTasks(listUserTasks);
+        // listDaysUserTasks = FilterTasks(listUserTasks);
     }
 
     private void ShowProgress()
@@ -350,19 +326,19 @@
         }
     }
 
-    private void SelectTask(string taskGUID)
+    private void SelectTaskItem(string taskGUID)
     {
-        selectedTask = listDaysUserTasks.FirstOrDefault(task => task.TaskGUID == taskGUID);
+        selectedTaskItem = _taskService.GetTaskItem(listTaskItems, taskGUID);
 
-        if (selectedTask.Priority == 1) { selectedPriority = "High"; }
-        else if (selectedTask.Priority == 2) { selectedPriority = "Medium"; }
+        if (selectedTaskItem.Priority == 1) { selectedPriority = "High"; }
+        else if (selectedTaskItem.Priority == 2) { selectedPriority = "Medium"; }
         else { selectedPriority = "Low"; }
 
-        if (selectedTask.StartDateTime == null)
+        if (selectedTaskItem.StartDateTime == null)
         {
             selectedStatus = "Not started";
         }
-        else if (selectedTask.StartDateTime != null && !selectedTask.IsDone)
+        else if (selectedTaskItem.StartDateTime != null && !selectedTaskItem.IsDone)
         {
             selectedStatus = "In progress";
         }
