--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -66,7 +66,7 @@
                                 <div class="col">
                                     <div class="btn-toolbar" role="toolbar">
                                         <div class="btn-group" style="padding-left:8px">
-                                            <button type="button" class="btn btn-danger" @onclick="() => DeleteTask(userTask.TaskGUID)">Delete</button>
+                                                    <button type="button" class="btn btn-danger" @onclick="() => DeleteTaskItem(userTask.TaskGUID)">Delete</button>
                                         </div>
                                     </div>
                                 </div>
@@ -160,7 +160,9 @@
 
     //
     private List<TaskItem> listTaskItems = new ();
+    private List<DeletedTaskItem> listDeletedTaskItems = new();
     private TaskItem selectedTaskItem = new ();
+
     //
 
 
@@ -266,6 +268,7 @@
     private async void LoadTaskItems()
     {
         listTaskItems = await _taskService.GetTaskItemsAsync(taskDate);
+        listTaskItems = listTaskItems.Where(t => !t.IsDeleted).ToList();
 
         if (listTaskItems == null || listTaskItems.Count == 0)
         {
@@ -273,43 +276,20 @@
         }
     }
 
-    private void DeleteTask(string taskGUID)
+    private async void DeleteTaskItem(string taskGUID)
     {
+        TaskItem itemToDelete = await _taskService.GetTaskItemAsync(listTaskItems, taskGUID);
+        itemToDelete.Delete();
 
-        // List<UserTask> listUserTasks = _auxDeskServices.GetUserTasks();
+        if (listDeletedTaskItems.Count == 0)
+        {
+            listDeletedTaskItems = await _taskService.GetDeletedTaskItemsAsync();
+        }
 
-        // UserTask taskToDelete = listUserTasks.FirstOrDefault(task => task.TaskGUID == taskGUID);
-        // taskToDelete.IsDeleted = true;
+        await _taskService.DeleteTaskItemAsync(listDeletedTaskItems, itemToDelete);
+        await _taskService.UpdateTaskItemsAsync(listTaskItems);
 
-        // if (taskToDelete.IsDone)
-        // {
-        //     CompletedTasks--;
-        // }
-        // if (taskToDelete.StartDateTime == null)
-        // {
-        //     NotStartedTasks--;
-        // } 
-        // else
-        // {
-        //     InProgressTasks--;
-        // }
-        // TotalTasks--;
-
-        // if (selectedTask.TaskGUID == taskToDelete.TaskGUID)
-        // {
-        //     selectedTask = new UserTask();
-        // }
-
-        // DeletedTask deletedTask = new DeletedTask {
-        //     TaskGUID = taskToDelete.TaskGUID,
-        //     TaskDeletedDate = DateOnly.FromDateTime(DateTime.UtcNow),
-        // };
-
-        // _auxDeskServices.DeleteTask(deletedTask);
-
-        // _auxDeskServices.Save(listUserTasks, null, false);
-
-        // listDaysUserTasks = FilterTasks(listUserTasks);
+        LoadTaskItems();
     }
 
     private void ShowProgress()
@@ -328,7 +308,7 @@
 
     private async void SelectTaskItem(string taskGUID)
     {
-        selectedTaskItem = await _taskService.GetTaskItem(listTaskItems, taskGUID);
+        selectedTaskItem = await _taskService.GetTaskItemAsync(listTaskItems, taskGUID);
 
         if (selectedTaskItem.Priority == 1) { selectedPriority = "High"; }
         else if (selectedTaskItem.Priority == 2) { selectedPriority = "Medium"; }
