--- a/Components/Pages/Recycle.razor
+++ b/Components/Pages/Recycle.razor
@@ -1,6 +1,11 @@
 ﻿@using Data;
 @using AuxDeskServices;
 
+@using Models;
+@using Services;
+
+@inject ITaskService _taskService
+
 @page "/recycle"
 
 <h3>Recycle</h3>
@@ -11,25 +16,25 @@
             <h6><b>Deleted Tasks</b></h6>
             <div class="border border-primary p-3 rounded-3" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
             <div class="row row-cols-2">
-            @foreach (UserTask userTask in listUsersDeletedTasks)
+                    @foreach (TaskItem taskItem in listTaskItems)
             {
                 
                 <div class="col">
                     <div class="card" style="margin-top:8px">
                         <div class="card-body">
                             <div class="row">
-                                <div class="col" @onclick="() => SelectTask(userTask.TaskGUID)">
-                                    <h6 class="card-title"><b>@userTask.UserTaskData.Title</b></h6>
+                                        <div class="col" @onclick="() => SelectTask(taskItem.TaskGUID)">
+                                            <h6 class="card-title"><b>@taskItem.Title</b></h6>
                                 </div>
                                 <div class="col" >
-                                    @if (userTask.Priority == 1) {
+                                            @if (taskItem.Priority == 1) {
                                         <p class="text-center fw-semibold" style="background-color:red;border-radius:4px">High</p>
                                     }
-                                    @if (userTask.Priority == 2)
+                                                @if (taskItem.Priority == 2)
                                     {
                                         <p class="text-center fw-semibold" style="background-color:orange;border-radius:4px">Medium</p>
                                     }
-                                    @if (userTask.Priority == 3)
+                                            @if (taskItem.Priority == 3)
                                     {
                                         <p class="text-center fw-semibold" style="background-color:green;border-radius:4px">Low</p>
                                     }
@@ -39,7 +44,7 @@
                                 <div class="col">
                                     <div class="btn-toolbar" role="toolbar">
                                         <div class="btn-group" style="padding-left:8px">
-                                            <button type="button" class="btn btn-danger" @onclick="() => RestoreTask(userTask.TaskGUID)">Restore</button>
+                                                    <button type="button" class="btn btn-danger" @onclick="() => RestoreTask(taskItem.TaskGUID)">Restore</button>
                                         </div>
                                     </div>
                                 </div>
@@ -65,7 +70,7 @@
             </div>
             <div class="input-group mb-3  text-center">
                 <span class="input-group-text" id="inputGroup-sizing-default" disabled>Date</span>
-                <input type="date" class="form-control" aria-label="Sizing example input" value="@selectedTask.AssignedDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default" disabled>
+                <input type="date" class="form-control" aria-label="Sizing example input" @bind="@selectedTaskItem.AssignedDate" aria-describedby="inputGroup-sizing-default" disabled>
             </div>
             <div class="input-group" style="height:60vh">
                 <textarea class="form-control" aria-label="With textarea" placeholder="Notes" disabled>@selectedTask.UserTaskData.Notes</textarea>
@@ -76,9 +81,13 @@
 </div>
 
 @code {
-    AuxDeskServices _auxDeskServices = new AuxDeskServices();
     private List<UserTask> listUsersDeletedTasks = new List<UserTask>();
     private UserTask selectedTask = new UserTask();
+
+    DateOnly todayDate = DateOnly.FromDateTime(DateTime.UtcNow);
+    private List<DeletedTaskItem> listDeletedTaskItems = new();
+    private List<TaskItem> listTaskItems = new();
+    private TaskItem selectedTaskItem = new();
 
     private bool isDropdownOpenPriorty = false;
     private string selectedPriority = "Medium";
@@ -86,46 +95,71 @@
 
     protected override void OnInitialized()
     {
-        AuxDeskServices _auxDeskServices = new AuxDeskServices();
+        LoadRecycledTasks();
 
-        List<DeletedTask> listDeletedTasks = _auxDeskServices.GetDeletedTasks();
+        // AuxDeskServices _auxDeskServices = new AuxDeskServices();
 
-        if (listDeletedTasks.Count == 0)
+        // List<DeletedTask> listDeletedTasks = _auxDeskServices.GetDeletedTasks();
+
+        // if (listDeletedTasks.Count == 0)
+        // {
+        //     return;
+        // }
+
+        // List<UserTask> listUserTasks = _auxDeskServices.GetUserTasks();
+
+        // foreach (DeletedTask deletedTask in listDeletedTasks)
+        // {
+        //     UserTask selectedTask = listUserTasks.FirstOrDefault(userTask => userTask.TaskGUID == deletedTask.TaskGUID);
+        //     if (selectedTask != null)
+        //     {
+        //         listUsersDeletedTasks.Add(selectedTask);
+        //     }
+        // }
+    }
+    private async void LoadRecycledTasks()
+    {
+        // Get recycled tasks
+        listDeletedTaskItems = await _taskService.GetDeletedTaskItemsAsync();
+
+        if (listDeletedTaskItems.Count == 0)
         {
             return;
         }
 
-        List<UserTask> listUserTasks = _auxDeskServices.GetUserTasks();
+        // Get all tasks
+        List<TaskItem> listAllTaskItems = await _taskService.GetTaskItemsAsync(null);
 
-        foreach (DeletedTask deletedTask in listDeletedTasks)
+        // Add to list of tasks to show
+        foreach (DeletedTaskItem deletedTask in listDeletedTaskItems)
         {
-            UserTask selectedTask = listUserTasks.FirstOrDefault(userTask => userTask.TaskGUID == deletedTask.TaskGUID);
-            if (selectedTask != null)
+            TaskItem taskItem = listAllTaskItems.FirstOrDefault(taskItem => taskItem.TaskGUID == deletedTask.TaskGUID);
+            if (taskItem != null)
             {
-                listUsersDeletedTasks.Add(selectedTask);
+                listTaskItems.Add(taskItem);
             }
         }
     }
     private void RestoreTask(string taskGUID)
     {
-        // Get all tasks
-        List<UserTask> listUserTasks = _auxDeskServices.GetUserTasks();
+        // // Get all tasks
+        // List<UserTask> listUserTasks = _auxDeskServices.GetUserTasks();
 
-        // Find task by TaskGUID
-        UserTask selectedTask = listUserTasks.FirstOrDefault(userTask => userTask.TaskGUID == taskGUID);
+        // // Find task by TaskGUID
+        // UserTask selectedTask = listUserTasks.FirstOrDefault(userTask => userTask.TaskGUID == taskGUID);
 
-        // Set isDeleted to false
-        selectedTask.IsDeleted = false;
+        // // Set isDeleted to false
+        // selectedTask.IsDeleted = false;
 
-        List<DeletedTask> listDeletedTasks = _auxDeskServices.GetDeletedTasks();
-        listDeletedTasks.RemoveAll(deletedTask => deletedTask.TaskGUID == taskGUID);
+        // List<DeletedTask> listDeletedTasks = _auxDeskServices.GetDeletedTasks();
+        // listDeletedTasks.RemoveAll(deletedTask => deletedTask.TaskGUID == taskGUID);
 
-        listUsersDeletedTasks.RemoveAll(deletedTask => deletedTask.TaskGUID == taskGUID);
-        // Save all tasks
-        _auxDeskServices.Save(listUserTasks, null, false);
-        _auxDeskServices.Save(null, listDeletedTasks, true);
+        // listUsersDeletedTasks.RemoveAll(deletedTask => deletedTask.TaskGUID == taskGUID);
+        // // Save all tasks
+        // _auxDeskServices.Save(listUserTasks, null, false);
+        // _auxDeskServices.Save(null, listDeletedTasks, true);
 
-        //StateHasChanged();
+        // //StateHasChanged();
     }
     private void SelectTask(string taskGUID)
     {
