All tasks: Check added, If task is deleted do not show on page

--- a/Components/Pages/AllTasks.razor
+++ b/Components/Pages/AllTasks.razor
@@ -243,6 +243,10 @@
 
         foreach (TaskItem taskItem in listTaskItems)
         {
+            if (taskItem.TaskDeleted())
+            {
+                continue;
+            }
             if (taskItem.NotStarted())
             {
                 // Add to not started
