--- a/Components/Pages/AllTasks.razor
+++ b/Components/Pages/AllTasks.razor
@@ -243,7 +243,7 @@
 
         foreach (TaskItem taskItem in listTaskItems)
         {
-            if (taskItem.TaskDeleted())
+            if (taskItem.IsDeleted)
             {
                 continue;
             }
@@ -259,7 +259,7 @@
                 listInProgress.Add(taskItem);
                 continue;
             }
-            if (taskItem.IsCompleted())
+            if (taskItem.IsDone)
             {
                 // Add to Done
                 listDone.Add(taskItem);
