--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -19,17 +19,19 @@
     <div class="col">
         <div class="p-2">
             <h6><b>Days Tasks</b></h6>
-            <div class="border border-primary p-3 rounded-3" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
-                <div class="input-group mb-3 text-center">
-                    <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
-                    <input type="date" class="form-control" aria-label="Sizing example input" @onchange="SelectDate" value="@taskDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default">
+            <div class="border border-primary p-3 rounded-3 parent-container" style="border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
+                <div class="header-fixed">
+                    <div class="input-group text-center">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
+                        <input type="date" class="form-control" aria-label="Sizing example input" @onchange="SelectDate" value="@taskDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default">
+                    </div>
+                    <button type="button" class="btn btn-primary mt-2 mb-2" style="width:100%" @onclick="DirectToNewTask"><b>+</b></button>
                 </div>
-                <button type="button" class="btn btn-primary" style="width:100%" @onclick="DirectToNewTask"><b>+</b></button>
-            <div class="row row-cols-2">
+                <div class="row row-cols-2 content-scrollable">
             @foreach (TaskItem userTask in listTaskItems)
             {
                 <div class="col">
-                    <div class="card" style="margin-top:8px">
+                    <div class="card" style="margin-bottom:8px">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col" @onclick="() => SelectTaskItem(userTask.TaskGUID)">
@@ -75,8 +77,8 @@
                     </div>
                 </div>
             }
-            </div>
-            <div class="card" @onclick="ShowProgress" style="margin-top:8px">
+                </div>
+                <div class="card footer-fixed" @onclick="ShowProgress" style="margin-top:8px">
                 <div class="card-header"><b>Completed: @CompletedTasks/@TotalTasks</b></div>
                     <div class="card-body" style="display:@ProgressDisplay">
                         <h6>Not started: @NotStartedTasks</h6>
@@ -90,52 +92,56 @@
     <div class="col">
         <div class="p-2">
             <h6><b>Current Task</b></h6>
-            <div class="border border-primary p-3 rounded-3" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Title..." @bind="@selectedTaskItem.Title" disabled>
-                    <div class="dropdown">
-                        <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button" disabled>
-                            @selectedPriority
-                        </button>
-                        <ul class="dropdown-menu @(isDropdownOpenPriorty ? "show" : "")" style="@(isDropdownOpenPriorty ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
-                            <li><a class="dropdown-item" @onclick="@(() => SelectPriority(1))">High</a></li>
-                            <li><a class="dropdown-item" @onclick="@(() => SelectPriority(2))">Medium</a></li>
-                            <li><a class="dropdown-item" @onclick="@(() => SelectPriority(3))">Low</a></li>
-                        </ul>
+            <div class="border border-primary p-3 rounded-3 parent-container" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
+                <div class="header-fixed">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Title..." @bind="@selectedTaskItem.Title" disabled>
+                        <div class="dropdown">
+                            <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button" disabled>
+                                @selectedPriority
+                            </button>
+                            <ul class="dropdown-menu @(isDropdownOpenPriorty ? "show" : "")" style="@(isDropdownOpenPriorty ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
+                                <li><a class="dropdown-item" @onclick="@(() => SelectPriority(1))">High</a></li>
+                                <li><a class="dropdown-item" @onclick="@(() => SelectPriority(2))">Medium</a></li>
+                                <li><a class="dropdown-item" @onclick="@(() => SelectPriority(3))">Low</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-group mb-3 text-center col">
+                            <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
+                            @if (selectedTaskItem.TaskGUID != "")
+                            {
+                                <input type="date" class="form-control" aria-label="Sizing example input" @bind="@selectedTaskItem.AssignedDate" aria-describedby="inputGroup-sizing-default" disabled>
+                            }
+                            else
+                            {
+                                <input type="date" class="form-control" aria-label="Sizing example input" value="@todayDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default" disabled>
+                            }
+                        </div>
+                    </div>
+                    <div class="col">
+                        <button type="button" class="btn btn-danger float-end ms-3">Delete</button>
+                        <div class="dropdown">
+                            <button class="btn btn-outline-secondary dropdown-toggle float-end" @onclick="ToggleDropdownStatus" type="button">
+                                @selectedStatus
+                            </button>
+                            <ul class="dropdown-menu @(isDropdownOpenStatus ? "show" : "")" style="@(isDropdownOpenStatus ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
+                                <li><a class="dropdown-item" @onclick="@(() => SelectStatus(1))">Not started</a></li>
+                                <li><a class="dropdown-item" @onclick="@(() => SelectStatus(2))">In progress</a></li>
+                                <li><a class="dropdown-item" @onclick="@(() => SelectStatus(3))">Done</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            <div class="row">
-                <div class="input-group mb-3 text-center col">
-                    <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
-                        @if (selectedTaskItem.TaskGUID != "")
-                        {
-                            <input type="date" class="form-control" aria-label="Sizing example input" @bind="@selectedTaskItem.AssignedDate" aria-describedby="inputGroup-sizing-default" disabled>
-                        } else
-                        {
-                            <input type="date" class="form-control" aria-label="Sizing example input" value="@todayDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default" disabled>
-                        }
-                </div>
-                <div class="col">
-                    <button type="button" class="btn btn-danger float-end ms-3">Delete</button>
-                    <div class="dropdown">
-                        <button class="btn btn-outline-secondary dropdown-toggle float-end" @onclick="ToggleDropdownStatus" type="button">
-                            @selectedStatus
-                        </button>
-                        <ul class="dropdown-menu @(isDropdownOpenStatus ? "show" : "")" style="@(isDropdownOpenStatus ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
-                            <li><a class="dropdown-item" @onclick="@(() => SelectStatus(1))">Not started</a></li>
-                            <li><a class="dropdown-item" @onclick="@(() => SelectStatus(2))">In progress</a></li>
-                            <li><a class="dropdown-item" @onclick="@(() => SelectStatus(3))">Done</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="input-group" style="height:60vh">
+                <div class="input-group mt-3" style="flex:1;">
                     <textarea class="form-control" aria-label="With textarea" @bind="@selectedTaskItem.Notes" placeholder="Notes" disabled></textarea>
                 </div>
             </div>
         </div>
     </div>
 </div>
-</div>
+
 
 @code {
     DateOnly todayDate = DateOnly.FromDateTime(DateTime.UtcNow);
