--- a/Components/Pages/Recycle.razor
+++ b/Components/Pages/Recycle.razor
@@ -14,8 +14,8 @@
     <div class="col-sm-6">
         <div class="p-2">
             <h6><b>Deleted Tasks</b></h6>
-            <div class="border border-primary p-3 rounded-3" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
-            <div class="row row-cols-2">
+            <div class="border border-primary p-3 rounded-3 parent-container" style="border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
+                <div class="row row-cols-2 content-scrollable">
                     @foreach (TaskItem taskItem in listTaskItems)
             {
                 
@@ -61,18 +61,20 @@
     <div class="col-sm-6">
         <div class="p-2">
             <h6><b>Selected Task</b></h6>
-            <div class="border border-primary p-3 rounded-3" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
-            <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Title..." value="@selectedTaskItem.Title" disabled>
-                <div class="dropdown">
-                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" disabled>@selectedPriority</button>
+            <div class="border border-primary p-3 rounded-3 parent-container" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
+                <div class="header-fixed">
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control" placeholder="Title..." value="@selectedTaskItem.Title" disabled>
+                    <div class="dropdown">
+                        <button class="btn btn-outline-secondary dropdown-toggle" type="button" disabled>@selectedPriority</button>
+                    </div>
+                </div>
+                <div class="input-group mb-3  text-center">
+                    <span class="input-group-text" id="inputGroup-sizing-default" disabled>Date</span>
+                    <input type="date" class="form-control" aria-label="Sizing example input" @bind="@selectedTaskItem.AssignedDate" aria-describedby="inputGroup-sizing-default" disabled>
                 </div>
             </div>
-            <div class="input-group mb-3  text-center">
-                <span class="input-group-text" id="inputGroup-sizing-default" disabled>Date</span>
-                    <input type="date" class="form-control" aria-label="Sizing example input" @bind="@selectedTaskItem.AssignedDate" aria-describedby="inputGroup-sizing-default" disabled>
-            </div>
-            <div class="input-group" style="height:60vh">
+            <div class="input-group" style="flex:1">
                     <textarea class="form-control" aria-label="With textarea" placeholder="Notes" disabled>@selectedTaskItem.Notes</textarea>
             </div>
             </div>
