--- a/Components/Pages/Recycle.razor
+++ b/Components/Pages/Recycle.razor
@@ -59,7 +59,7 @@
     <div class="col-sm-6">
         <div class="p-2">
             <h6><b>Selected Task</b></h6>
-            <div class="border border-primary p-3 rounded-3 parent-container" style="height:85vh;border-color:#65cf9e !important; background-color:rgba(0, 0, 0, 0.2)">
+            <div class="border border-primary p-3 rounded-3 parent-container" style="height:85vh;border-color:@TaskBorderCol; background-color:rgba(0, 0, 0, 0.2)">
                 <div class="header-fixed">
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Title..." value="@selectedTaskItem.Title" disabled>
@@ -86,6 +86,7 @@
     private List<TaskItem> listAllTaskItems = new();
     private List<TaskItem> listTaskItems = new();
     private TaskItem selectedTaskItem = new();
+    private string TaskBorderCol = "#65cf9e !important";
 
     private bool isDropdownOpenPriorty = false;
     private string selectedPriority = "Medium";
@@ -122,9 +123,9 @@
     {
         selectedTaskItem = await _taskService.GetTaskItemAsync(listTaskItems, taskGUID);
 
-        if (selectedTaskItem.Priority == 1) { selectedPriority = "High"; }
-        else if (selectedTaskItem.Priority == 2) { selectedPriority = "Medium"; }
-        else { selectedPriority = "Low"; }
+        if (selectedTaskItem.Priority == 1) { TaskBorderCol = "red !important"; }
+        else if (selectedTaskItem.Priority == 2) { TaskBorderCol = "yellow !important"; }
+        else { TaskBorderCol = "green !important"; }
     }
     private async void RestoreTaskItem(string taskGUID)
     {
